style: 背景添加透明度

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>简单哔哩哔哩弹幕机</title>
   </head>
 
-  <body>
-    <div id="app"></div>
+  <body style="background-color: rgba(87,87,87,0.5);">
+    <div id="app" style="opacity: 0.7;"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
